[package]
name = "timer"
version = "0.1.1"
authors = ["David Rajchenbach-Teller <yoric@rajtel.name>"]
description = "A simple timer. Use it to schedule execution of closures after a delay or at a given timestamp."
documentation = "http://yoric.github.io/timer.rs/doc/timer/"
homepage = "https://github.com/Yoric/timer.rs"
keywords = ["timer", "time", "alarm", "schedule"]
license = "MPL-2.0"

[dependencies]
time = "^0.1"

