[package]
name = "timer"
version = "0.1.2"
authors = ["David Rajchenbach-Teller <yoric@rajtel.name>"]
description = "A simple timer. Use it to schedule execution of closures after a delay or at a given timestamp."
documentation = "http://yoric.github.io/timer.rs/doc/timer/"
homepage = "https://github.com/Yoric/timer.rs"
readme = "README.md"
keywords = ["timer", "time", "alarm", "schedule", "chrono", "chronometer"]
license = "MPL-2.0"


[dependencies]
chrono = "^0.2"

